# stein_saks_papir

./: Cargo.toml
game/: Cargo.toml
game/src/: lib.rs  player.rs  session.rs
game/src/actor/: actor.rs  actor_kind.rs  mod.rs
game/src/com/: make_request.rs  mod.rs  receive_message.rs  send_message.rs
game/src/error/: join_error.rs  leave_error.rs  mod.rs  prompt_error.rs  promt_error.rs  receive_error.rs  request_error.rs  session_error.rs
game/src/event/: mod.rs  on_join.rs  on_leave.rs  on_poll.rs
game/src/game/: game.rs  game_obj.rs  mod.rs
game/src/message/: client_message.rs  mod.rs  server_message.rs
game/src/player/: human.rs
game/src/player/human/: human_extra.rs  human_obj.rs
game/src/session/: error.rs  event.rs  mod.rs  session.rs  session_client.rs  session_either.rs  session_kind.rs  session_server.rs
game/src/session/error/: join_error.rs  poison_error.rs  request_join_error.rs  send_error.rs
game/src/session/event/: on_join_event.rs  spin_event.rs
game/src/session/session_client/: friend.rs  message.rs
game/src/ui/: mod.rs  tui_obj.rs  ui_obj.rs
game_rps/: Cargo.toml
game_rps/src/: boxed.rs  castaway.rs  game.rs  game_rps.rs  main.rs  player_rps.rs  session_rps.rs  test.rs  transport.rs  ui_rps.rs
game_rps/src/error/: application_error.rs  game_rps_error.rs  mod.rs  player_decision_error.rs
game_rps/src/game_rps/: choice.rs  end_state.rs  player_rps.rs  rps_residual.rs  session_rps.rs  ui_rps.rs
game_rps/src/message/: mod.rs  rps_client_message_data.rs  rps_server_message_data.rs
game_rps/src/player/: human.rs
game_rps/src/player_rps/: human_rps.rs
game_rps/src/repeat_until/: error.rs
game_rps/src/tcp_udp/: deserialize.rs  error.rs  serialize.rs
game_rps/src/transport/: listen.rs  listener.rs  transport_tcp_udp.rs
transport/: Cargo.toml
transport/src/: lib.rs  para_listener.rs  para_stream.rs  receive_buffer.rs
transport/src/com/: make_request.rs  mod.rs  receive_message.rs  send_message.rs
transport/src/error/: deadlock_error.rs  join_error.rs  join_thread_error.rs  mod.rs  request_error.rs  spawn_thread_error.rs  timeout_error.rs
transport/src/event/: mod.rs  on_connect.rs
transport/src/transport/: listener_transport.rs  mod.rs  stream_transport.rs  transport.rs  transport_obj.rs
transport_tcp/: Cargo.toml
transport_tcp/src/: _transport_tcp_udp.rs  lib.rs  transport_tcp.rs
transport_tcp/src/error/: mod.rs  spawn_tcp_listener_error.rs  spawn_tcp_stream_error.rs  tcp_connect_error.rs  tcp_listener_error.rs  tcp_message_error.rs  tcp_spawn_stream_error.rs  tcp_stream_error.rs
(+178 files in other folders)
