[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.196"
moddef = "0.2.2"
transport = {path = "../transport"}
local-ip-address = "0.5.7"
thiserror = "1.0"
clone_box = "0.1.3"
spellcast = "0.1.2"
static_assertions = "1.1.0"