[package]
name = "stein_saks_papir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clone_box = "0.1.3"
moddef = "0.2.2"
local-ip-address = "0.5.7"
thiserror = "1.0.56"
static_assertions = "1.1.0"
spellcast = "0.1.2"
serde = "1.0.196"
transport = {path = "../transport"}
transport_tcp = {path = "../transport_tcp"}
game = {path = "../game"}
poison_error_obj = {path = "../poison_error_obj"}