[package]
name = "transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moddef = {path = "../moddef"}
poison_error_obj = {path = "../poison_error_obj"}
repeat_until = {path = "../repeat_until"}
atomic_buffer = {path = "../atomic_buffer"}