[package]
name = "transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moddef = "0.2.2"
poison_error_obj = {path = "../poison_error_obj"}
repeat_until = {path = "../repeat_until"}
atomic_buffer = {path = "../atomic_buffer"}
serde = { version = "1.0", features = ["derive"] }